generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_array_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
[item1, item2]

AST:
(source_file
  (expression_statement
    (array_expression
      (identifier item1)
      (identifier item2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
