generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_assignment_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
x1 = y

AST:
(source_file
  (ERROR
    (assignment_expression
      (identifier x1)
      (identifier y)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "x1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 3,
        },
        SerializableUsage {
            name: "y",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 6,
            end_line: 1,
            end_column: 7,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
