generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_await_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
future.await

AST:
(source_file
  (expression_statement
    (await_expression
      (identifier future)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "future",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 7,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
