generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_captured_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
match x2 { y1 @ Some(_) => y1 }

AST:
(source_file
  (expression_statement
    (match_expression
      (identifier x2)
      (match_block
        (match_arm
          (match_pattern
            (captured_pattern
              (identifier y1)
              (tuple_struct_pattern
                (identifier Some)
              )
            )
          )
          (identifier y1)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "x2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 7,
            end_line: 1,
            end_column: 9,
        },
        SerializableUsage {
            name: "y1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 12,
            end_line: 1,
            end_column: 14,
        },
        SerializableUsage {
            name: "Some",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 17,
            end_line: 1,
            end_column: 21,
        },
        SerializableUsage {
            name: "y1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 28,
            end_line: 1,
            end_column: 30,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
